--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -136,6 +136,7 @@ Library
      BangPatterns
      CPP
      DeriveDataTypeable
+     DeriveGeneric
      DoRec
      FlexibleInstances
      FunctionalDependencies
