comment out "GHC-Prof-Options: -auto-all" from toysolver.cabal to suppress warnings.

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -263,7 +263,7 @@ Library
      ToySolver.Data.Polynomial.Base
      ToySolver.Text.PBFile.Types
      Paths_toysolver
-  GHC-Prof-Options: -auto-all
+  -- GHC-Prof-Options: -auto-all
 
 Executable toysolver
   Main-is: toysolver.hs
@@ -283,7 +283,7 @@ Executable toysolver
     GHC-Options: -threaded
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
-  GHC-Prof-Options: -auto-all
+  -- GHC-Prof-Options: -auto-all
 
 Executable toysat
   Main-is: toysat.hs
@@ -311,7 +311,7 @@ Executable toysat
   Other-Extensions: ScopedTypeVariables, CPP
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
-  GHC-Prof-Options: -auto-all
+  -- GHC-Prof-Options: -auto-all
   if flag(ForceChar8) && impl(ghc)
     Build-Depends: base >=4.5
     CPP-OPtions: "-DFORCE_CHAR8"
@@ -330,7 +330,7 @@ Executable toyfmf
   Default-Language: Haskell2010
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
-  GHC-Prof-Options: -auto-all
+  -- GHC-Prof-Options: -auto-all
 
 -- Converters
 
