add FlexibleContexts to Other-Extensions section in toysolver.cabal

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -138,6 +138,7 @@ Library
      DeriveDataTypeable
      DeriveGeneric
      DoRec
+     FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GeneralizedNewtypeDeriving
