--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -100,8 +100,6 @@ Library
      time,
      primes,
      process >=1.1.0.2,
-     dlist >=0.7.0 && <0.8.0,
-     attoparsec,
      parse-dimacs,
      queue,
      heaps,
@@ -118,7 +116,8 @@ Library
      extended-reals >=0.1 && <1.0,
      data-interval >=1.0.1 && <1.3.0,
      finite-field >=0.7.0 && <1.0.0,
-     sign >=0.2.0 && <1.0.0
+     sign >=0.2.0 && <1.0.0,
+     pseudo-boolean >=0.1.0.0 && <0.1.1.0
   -- NOTE: temporary-1.2.0.2 does not work with exceptions-0.6
   if flag(Exceptions06)
      Build-Depends: temporary >1.2.0.2, exceptions >=0.6
@@ -220,11 +219,6 @@ Library
      ToySolver.Data.Polynomial.Factorization.Zassenhaus
      ToySolver.Data.Polynomial.GroebnerBasis
      ToySolver.Data.Polynomial.Interpolation.Lagrange
-     ToySolver.Data.PseudoBoolean
-     ToySolver.Data.PseudoBoolean.Builder
-     ToySolver.Data.PseudoBoolean.ByteStringBuilder
-     ToySolver.Data.PseudoBoolean.Parsec
-     ToySolver.Data.PseudoBoolean.Attoparsec
      ToySolver.Data.Var
      ToySolver.SAT
      ToySolver.SAT.Integer
@@ -262,7 +256,6 @@ Library
   Other-Modules:
      ToySolver.Data.AlgebraicNumber.Graeffe
      ToySolver.Data.Polynomial.Base
-     ToySolver.Data.PseudoBoolean.Types
      Paths_toysolver
   -- GHC-Prof-Options: -auto-all
 
@@ -278,6 +271,7 @@ Executable toysolver
     parsec,
     OptDir,
     parse-dimacs,
+    pseudo-boolean,
     toysolver
   Default-Language: Haskell2010
   if impl(ghc)
@@ -303,6 +297,7 @@ Executable toysat
     parse-dimacs,
     unbounded-delays,
     vector-space >=0.8.6,
+    pseudo-boolean,
     toysolver
   if flag(Time15)
     Build-Depends: time >=1.5.0
@@ -343,6 +338,7 @@ Executable lpconvert
     containers,
     filepath,
     parse-dimacs,
+    pseudo-boolean,
     toysolver
   Default-Language: Haskell2010
 
@@ -354,6 +350,7 @@ Executable pbconvert
     containers,
     filepath,
     parse-dimacs,
+    pseudo-boolean,
     toysolver
   Default-Language: Haskell2010
 
@@ -414,6 +411,7 @@ Executable pigeonhole
     base >=4 && <5,
     containers,
     filepath,
+    pseudo-boolean,
     toysolver
   Default-Language: Haskell2010
 
@@ -440,6 +438,7 @@ Executable pbverify
     array,
     containers,
     filepath,
+    pseudo-boolean,
     toysolver
   Default-Language: Haskell2010
 
@@ -632,23 +631,6 @@ Test-suite TestMPSFile
   Build-depends:
     base >=4 && <5,
     containers,
-    toysolver,
-    tasty >=0.10.1,
-    tasty-hunit ==0.9.*,
-    tasty-quickcheck ==0.8.*,
-    tasty-th,
-    HUnit,
-    QuickCheck >=2.5 && <3
-  Default-Language: Haskell2010
-  Other-Extensions: TemplateHaskell
-
-Test-suite TestPBFile
-  Type:              exitcode-stdio-1.0
-  HS-Source-Dirs:    test
-  Main-is:           TestPBFile.hs
-  Build-depends:
-    base >=4 && <5,
-    bytestring,
     toysolver,
     tasty >=0.10.1,
     tasty-hunit ==0.9.*,
