add build script for building binary package for linux-x86_64

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -17,6 +17,7 @@ Extra-Source-Files:
    COPYING
    .ghci
    .travis.yml
+   build_bdist_linux-x86_64.sh
    src/TseitinEncode.hs
    src/ToySolver/Data/Polyhedron.hs
    samples/gcnf/*.cnf
