travis: reomve GHC-7.4.2 from build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 # - CABALVER=1.16 GHCVER=7.2.1
 # - CABALVER=1.16 GHCVER=7.2.2
 # - CABALVER=1.16 GHCVER=7.4.1
- - CABALVER=1.16 GHCVER=7.4.2
+# - CABALVER=1.16 GHCVER=7.4.2
 # - CABALVER=1.16 GHCVER=7.6.1
 # - CABALVER=1.16 GHCVER=7.6.2
  - CABALVER=1.18 GHCVER=7.6.3
@@ -19,10 +19,6 @@ env:
  - CABALVER=1.18 GHCVER=7.8.3 COVERAGE=1
  - CABALVER=1.22 GHCVER=7.10.2
 # - CABALVER=head GHCVER=head   # see section about GHC HEAD snapshots
-
-matrix:
-  allow_failures:
-   - env: CABALVER=1.16 GHCVER=7.4.2
 
 # Note: the distinction between `before_install` and `install` is not important.
 before_install:
