--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -81,10 +81,6 @@ Flag Exceptions06
   Description: use exceptions >=0.6
   Manual: False
 
-Flag Random1013
-  Description: use random >=1.0.1.3
-  Manual: False
-
 Flag Time15
   Description: use time >=1.5.0
   Manual: False
@@ -116,6 +112,7 @@ Library
      queue,
      heaps,
      unbounded-delays,
+     vector,
      vector-space >=0.8.6,
      multiset,
      prettyclass >=1.0.0,
@@ -124,6 +121,8 @@ Library
      intern >=0.9.1.2 && <1.0.0.0,
      loop >=0.2.0 && < 1.0.0,
      data-default-class,
+     -- createSystemRandom requires mwc-random >=0.13.1.0
+     mwc-random >=0.13.1 && <0.14,
      OptDir,
      extended-reals >=0.1 && <1.0,
      data-interval >=1.0.1 && <1.3.0,
@@ -135,11 +134,6 @@ Library
      Build-Depends: temporary >1.2.0.2, exceptions >=0.6
   else
      Build-Depends: temporary >=1.2, exceptions ==0.5
-  -- NOTE: random-1.0.1.3 uses atomicModifyIORef' which is provided by base >=4.6.0.0.
-  if flag(Random1013)
-     Build-Depends: base >=4.6.0.0, random >=1.0.1.3
-  else
-     Build-Depends: random <1.0.1.3
   if impl(ghc)
      Build-Depends: ghc-prim
   Default-Language: Haskell2010
@@ -299,7 +293,7 @@ Executable toysat
   Build-Depends:
     base >=4 && <5,
     data-default-class,
-    random,
+    mwc-random,
     containers >= 0.4.2,
     array,
     process >=1.1.0.2,
@@ -308,6 +302,7 @@ Executable toysat
     filepath,
     parse-dimacs,
     unbounded-delays,
+    vector,
     vector-space >=0.8.6,
     pseudo-boolean,
     toysolver
@@ -464,7 +459,8 @@ Test-suite TestSAT
     base >=4 && <5,
     array,
     containers,
-    random,
+    mwc-random,
+    vector,
     toysolver,
     tasty >=0.10.1,
     tasty-hunit ==0.9.*,
