add build script for MaxSAT Evaluations

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -25,6 +25,11 @@ Extra-Source-Files:
    build_bdist_macos.sh
    build_bdist_win32.sh
    build_bdist_win64.sh
+   build_bdist_maxsat_evaluation.sh
+   misc/maxsat/toysat/README.md
+   misc/maxsat/toysat/toysat
+   misc/maxsat/toysat_ls/README.md
+   misc/maxsat/toysat_ls/toysat
    src/TseitinEncode.hs
    src/ToySolver/Data/Polyhedron.hs
    samples/gcnf/*.cnf
