replace defaultOptions with def of Default class

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -353,6 +353,7 @@ Executable lpconvert
     base >=4 && <5,
     containers,
     filepath,
+    data-default-class,
     parse-dimacs,
     pseudo-boolean,
     toysolver
@@ -365,6 +366,7 @@ Executable pbconvert
     base >=4 && <5,
     containers,
     filepath,
+    data-default-class,
     parse-dimacs,
     pseudo-boolean,
     toysolver
@@ -470,6 +472,7 @@ Test-suite TestSAT
     containers,
     mwc-random,
     vector,
+    data-default-class,
     toysolver,
     tasty >=0.10.1,
     tasty-hunit ==0.9.*,
@@ -504,6 +507,7 @@ Test-suite TestSimplex2
     base >=4 && <5,
     containers,
     vector-space >=0.8.6,
+    data-default-class,
     toysolver,
     tasty >=0.10.1,
     tasty-hunit ==0.9.*,
@@ -576,6 +580,7 @@ Test-suite TestArith
     base >=4 && <5,
     containers,
     vector-space >=0.8.6,
+    data-default-class,
     toysolver,
     data-interval,
     OptDir,
