remove TestPBFile test-suite from hpc-coveralls arguments

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,4 +62,4 @@ script:
    cd ..
 
 after_script:
- - "[ -n \"$COVERAGE\" ] && hpc-coveralls TestSAT TestSimplex TestSimplex2 TestMIPSolver2 TestPolynomial TestAReal TestArith TestContiTraverso TestCongruenceClosure TestLPFile TestMPSFile TestPBFile TestSDPFile TestUtil --exclude-dir=test || true"
+ - "[ -n \"$COVERAGE\" ] && hpc-coveralls TestSAT TestSimplex TestSimplex2 TestMIPSolver2 TestPolynomial TestAReal TestArith TestContiTraverso TestCongruenceClosure TestLPFile TestMPSFile TestSDPFile TestUtil --exclude-dir=test || true"
