--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -752,3 +752,14 @@ Benchmark BenchmarkKnapsack
     toysolver,
     criterion >=1.0 && <1.1
   Default-Language: Haskell2010
+
+Benchmark BenchmarkSubsetSum
+  type:             exitcode-stdio-1.0
+  hs-source-dirs:   benchmarks
+  main-is:          BenchmarkSubsetSum.hs
+  build-depends:
+    base >=4 && <5,
+    vector,
+    toysolver,
+    criterion >=1.0 && <1.1
+  Default-Language: Haskell2010
