--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -107,7 +107,7 @@ Library
   Build-Depends:
      base >=4 && <5,
      template-haskell,
-     -- mergeWithKey requires containers >=0.5.0
+     -- IntMap.mergeWithKey and IntMap.toDescList require containers >=0.5.0
      containers >=0.5.0,
      unordered-containers >=0.2.3 && <0.3.0,
      mtl >=2.1.2,
