--- a/.travis.yml
+++ b/.travis.yml
@@ -63,3 +63,11 @@ script:
 
 after_script:
  - "[ -n \"$COVERAGE\" ] && hpc-coveralls TestSAT TestSimplex TestSimplex2 TestMIPSolver2 TestPolynomial TestAReal TestArith TestContiTraverso TestCongruenceClosure TestLPFile TestMPSFile TestSDPFile TestUtil --exclude-dir=test || true"
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/d83a1749bd96e9513d76
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
