--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -666,6 +666,7 @@ Test-suite TestCongruenceClosure
   Main-is:           TestCongruenceClosure.hs
   Build-depends:
     base >=4 && <5,
+    array,
     containers,
     toysolver,
     tasty >=0.10.1,
