--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -137,6 +137,7 @@ Library
      data-default-class,
      -- createSystemRandom requires mwc-random >=0.13.1.0
      mwc-random >=0.13.1 && <0.14,
+     semigroups >=0.17,
      OptDir,
      extended-reals >=0.1 && <1.0,
      data-interval >=1.0.1 && <1.3.0,
