--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -758,6 +758,7 @@ Test-suite TestUtil
     base >=4 && <5,
     containers,
     vector,
+    vector-space,
     toysolver,
     tasty >=0.10.1,
     tasty-hunit ==0.9.*,
