--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -6,7 +6,7 @@ Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
 Maintainer:	masahiro.sakai@gmail.com
 Category:	Algorithms, Optimisation, Optimization, Theorem Provers, Constraints, Logic
 Cabal-Version:	>= 1.10
-Synopsis:	Assorted decision procedures for SAT, Max-SAT, PB, MIP, etc
+Synopsis:	Assorted decision procedures for SAT, SMT, Max-SAT, PB, MIP, etc
 Description:	Toy-level implementation of some decision procedures
 Bug-Reports:	https://github.com/msakai/toysolver/issues
 Tested-With:
