add naive implementation of QBF solver as ToySolver.QBF module

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -267,6 +267,7 @@ Library
      ToySolver.Data.Polynomial.GroebnerBasis
      ToySolver.Data.Polynomial.Interpolation.Lagrange
      ToySolver.Data.Var
+     ToySolver.QBF
      ToySolver.SAT
      ToySolver.SAT.Integer
      ToySolver.SAT.MUS
